--- a/_data/engine-cli/docker_plugin_push.yaml
+++ b/_data/engine-cli/docker_plugin_push.yaml
@@ -12,7 +12,7 @@ plink: docker_plugin.yaml
 options:
 - option: disable-content-trust
   default_value: "true"
-  description: Skip image verification
+  description: Skip image signing
 examples: |-
   The following example shows how to push a sample `user/plugin`.
 
@@ -21,6 +21,7 @@ examples: |-
 
   ID                  NAME                  TAG                 DESCRIPTION                ENABLED
   69553ca1d456        user/plugin           latest              A sample plugin for Docker false
+
   $ docker plugin push user/plugin
   ```
 
