--- a/_data/engine-cli/docker_service_update.yaml
+++ b/_data/engine-cli/docker_service_update.yaml
@@ -16,112 +16,125 @@ plink: docker_service.yaml
 options:
 - option: args
   description: Service command args
+- option: config-add
+  description: Add or update a config file on a service
+- option: config-rm
+  description: Remove a configuration file
 - option: constraint-add
-  default_value: '[]'
   description: Add or update a placement constraint
 - option: constraint-rm
-  default_value: '[]'
   description: Remove a constraint
 - option: container-label-add
-  default_value: '[]'
   description: Add or update a container label
 - option: container-label-rm
-  default_value: '[]'
   description: Remove a container label by its key
+- option: credential-spec
+  description: Credential spec for managed service account (Windows only)
+- option: detach
+  shorthand: d
+  default_value: "true"
+  description: |
+    Exit immediately instead of waiting for the service to converge
 - option: dns-add
-  default_value: '[]'
   description: Add or update a custom DNS server
 - option: dns-option-add
-  default_value: '[]'
   description: Add or update a DNS option
 - option: dns-option-rm
-  default_value: '[]'
   description: Remove a DNS option
 - option: dns-rm
-  default_value: '[]'
   description: Remove a custom DNS server
 - option: dns-search-add
-  default_value: '[]'
   description: Add or update a custom DNS search domain
 - option: dns-search-rm
-  default_value: '[]'
   description: Remove a DNS search domain
 - option: endpoint-mode
   description: Endpoint mode (vip or dnsrr)
+- option: entrypoint
+  description: Overwrite the default ENTRYPOINT of the image
 - option: env-add
-  default_value: '[]'
   description: Add or update an environment variable
 - option: env-rm
-  default_value: '[]'
   description: Remove an environment variable
 - option: force
   default_value: "false"
   description: Force update even if no changes require it
 - option: group-add
-  default_value: '[]'
   description: Add an additional supplementary user group to the container
 - option: group-rm
-  default_value: '[]'
   description: |
     Remove a previously added supplementary user group from the container
 - option: health-cmd
   description: Command to run to check health
 - option: health-interval
-  description: Time between running the check (ns|us|ms|s|m|h)
+  description: Time between running the check (ms|s|m|h)
 - option: health-retries
   default_value: "0"
   description: Consecutive failures needed to report unhealthy
+- option: health-start-period
+  description: |
+    Start period for the container to initialize before counting retries towards unstable (ms|s|m|h)
 - option: health-timeout
-  description: Maximum time to allow one check to run (ns|us|ms|s|m|h)
+  description: Maximum time to allow one check to run (ms|s|m|h)
 - option: host-add
-  default_value: '[]'
   description: Add or update a custom host-to-IP mapping (host:ip)
 - option: host-rm
-  default_value: '[]'
   description: Remove a custom host-to-IP mapping (host:ip)
 - option: hostname
   description: Container hostname
 - option: image
   description: Service image tag
 - option: label-add
-  default_value: '[]'
   description: Add or update a service label
 - option: label-rm
-  default_value: '[]'
   description: Remove a label by its key
 - option: limit-cpu
-  default_value: "0.000"
   description: Limit CPUs
 - option: limit-memory
-  default_value: 0 B
+  default_value: "0"
   description: Limit Memory
 - option: log-driver
   description: Logging driver for service
 - option: log-opt
-  default_value: '[]'
   description: Logging driver options
 - option: mount-add
   description: Add or update a mount on a service
 - option: mount-rm
-  default_value: '[]'
   description: Remove a mount by its target path
+- option: network-add
+  description: Add a network
+- option: network-rm
+  description: Remove a network
 - option: no-healthcheck
   default_value: "false"
   description: Disable any container-specified HEALTHCHECK
+- option: no-resolve-image
+  default_value: "false"
+  description: |
+    Do not query the registry to resolve image digest and supported platforms
+- option: placement-pref-add
+  description: Add a placement preference
+- option: placement-pref-rm
+  description: Remove a placement preference
 - option: publish-add
   description: Add or update a published port
 - option: publish-rm
   description: Remove a published port by its target port
+- option: quiet
+  shorthand: q
+  default_value: "false"
+  description: Suppress progress output
+- option: read-only
+  default_value: "false"
+  description: Mount the container's root filesystem as read only
 - option: replicas
   description: Number of tasks
 - option: reserve-cpu
-  default_value: "0.000"
   description: Reserve CPUs
 - option: reserve-memory
-  default_value: 0 B
+  default_value: "0"
   description: Reserve Memory
 - option: restart-condition
-  description: Restart when condition is met (none, on-failure, or any)
+  description: Restart when condition is met ("none"|"on-failure"|"any")
 - option: restart-delay
   description: Delay between restart attempts (ns|us|ms|s|m|h)
 - option: restart-max-attempts
@@ -131,33 +144,53 @@ options:
 - option: rollback
   default_value: "false"
   description: Rollback to previous specification
+- option: rollback-delay
+  default_value: 0s
+  description: Delay between task rollbacks (ns|us|ms|s|m|h)
+- option: rollback-failure-action
+  description: Action on rollback failure ("pause"|"continue")
+- option: rollback-max-failure-ratio
+  default_value: "0"
+  description: Failure rate to tolerate during a rollback
+- option: rollback-monitor
+  default_value: 0s
+  description: |
+    Duration after each task rollback to monitor for failure (ns|us|ms|s|m|h)
+- option: rollback-order
+  description: Rollback order ("start-first"|"stop-first")
+- option: rollback-parallelism
+  default_value: "0"
+  description: |
+    Maximum number of tasks rolled back simultaneously (0 to roll back all at once)
 - option: secret-add
   description: Add or update a secret on a service
 - option: secret-rm
-  default_value: '[]'
   description: Remove a secret
 - option: stop-grace-period
   description: |
     Time to wait before force killing a container (ns|us|ms|s|m|h)
+- option: stop-signal
+  description: Signal to stop the container
 - option: tty
   shorthand: t
   default_value: "false"
   description: Allocate a pseudo-TTY
 - option: update-delay
   default_value: 0s
-  description: Delay between updates (ns|us|ms|s|m|h) (default 0s)
+  description: Delay between updates (ns|us|ms|s|m|h)
 - option: update-failure-action
-  default_value: pause
-  description: Action on update failure (pause|continue)
+  description: Action on update failure ("pause"|"continue"|"rollback")
 - option: update-max-failure-ratio
   default_value: "0"
   description: Failure rate to tolerate during an update
 - option: update-monitor
   default_value: 0s
   description: |
-    Duration after each task update to monitor for failure (ns|us|ms|s|m|h) (default 0s)
+    Duration after each task update to monitor for failure (ns|us|ms|s|m|h)
+- option: update-order
+  description: Update order ("start-first"|"stop-first")
 - option: update-parallelism
-  default_value: "1"
+  default_value: "0"
   description: |
     Maximum number of tasks updated simultaneously (0 to update all at once)
 - option: user
@@ -203,7 +236,18 @@ examples: "### Update a service\n\n```bash\n$ docker service update --limit-cpu 
   \ web   replicated  0/4       nginx:alpine\n\n```\n\nOther options can be combined
   with `--rollback` as well, for example, `--update-delay 0s` to execute the rollback
   without a delay between tasks:\n\n```bash\n$ docker service update \\\n  --rollback
-  \\\n  --update-delay 0s\n  web\n\nweb\n\n```\n\n### Add or remove secrets\n\nUse
+  \\\n  --update-delay 0s\n  web\n\nweb\n\n```\n\nServices can also be set up to roll
+  back to the previous version automatically\nwhen an update fails. To set up a service
+  for automatic rollback, use\n`--update-failure-action=rollback`. A rollback will
+  be triggered if the fraction\nof the tasks which failed to update successfully exceeds
+  the value given with\n`--update-max-failure-ratio`.\n\nThe rate, parallelism, and
+  other parameters of a rollback operation are\ndetermined by the values passed with
+  the following flags:\n\n- `--rollback-delay`\n- `--rollback-failure-action`\n- `--rollback-max-failure-ratio`\n-
+  `--rollback-monitor`\n- `--rollback-parallelism`\n\nFor example, a service set up
+  with `--update-parallelism 1 --rollback-parallelism 3`\nwill update one task at
+  a time during a normal update, but during a rollback, 3\ntasks at a time will get
+  rolled back. These rollback parameters are respected both\nduring automatic rollbacks
+  and for rollbacks initiated manually using `--rollback`.\n\n### Add or remove secrets\n\nUse
   the `--secret-add` or `--secret-rm` options add or remove a service's\nsecrets.\n\nThe
   following example adds a secret named `ssh-2` and removes `ssh-1`:\n\n```bash\n$
   docker service update \\\n    --secret-add source=ssh-2,target=ssh-2 \\\n    --secret-rm
