--- a/_data/engine-cli/docker_stack_services.yaml
+++ b/_data/engine-cli/docker_stack_services.yaml
@@ -10,6 +10,8 @@ options:
 - option: filter
   shorthand: f
   description: Filter output based on conditions provided
+- option: format
+  description: Pretty-print services using a Go template
 - option: quiet
   shorthand: q
   default_value: "false"
@@ -46,4 +48,33 @@ examples: |-
   * id / ID (`--filter id=7be5ei6sqeye`, or `--filter ID=7be5ei6sqeye`)
   * name (`--filter name=myapp_web`)
   * label (`--filter label=key=value`)
+
+  ### Formatting
+
+  The formatting options (`--format`) pretty-prints services output
+  using a Go template.
+
+  Valid placeholders for the Go template are listed below:
+
+  Placeholder | Description
+  ------------|------------------------------------------------------------------------------------------
+  `.ID`       | Service ID
+  `.Name`     | Service name
+  `.Mode`     | Service mode (replicated, global)
+  `.Replicas` | Service replicas
+  `.Image`    | Service image
+
+  When using the `--format` option, the `stack services` command will either
+  output the data exactly as the template declares or, when using the
+  `table` directive, includes column headers as well.
+
+  The following example uses a template without headers and outputs the
+  `ID`, `Mode`, and `Replicas` entries separated by a colon for all services:
+
+  ```bash
+  $ docker stack services --format "{{.ID}}: {{.Mode}} {{.Replicas}}"
+
+  0zmvwuiu3vue: replicated 10/10
+  fm6uf97exkul: global 5/5
+  ```
 
