--- a/_data/engine-cli/docker_system_df.yaml
+++ b/_data/engine-cli/docker_system_df.yaml
@@ -7,6 +7,8 @@ usage: docker system df [OPTIONS]
 pname: docker system
 plink: docker_system.yaml
 options:
+- option: format
+  description: Pretty-print images using a Go template
 - option: verbose
   shorthand: v
   default_value: "false"
