--- a/_data/engine-cli/docker_container_run.yaml
+++ b/_data/engine-cli/docker_container_run.yaml
@@ -6,11 +6,9 @@ pname: docker container
 plink: docker_container.yaml
 options:
 - option: add-host
-  default_value: '[]'
   description: Add a custom host-to-IP mapping (host:ip)
 - option: attach
   shorthand: a
-  default_value: '[]'
   description: Attach to STDIN, STDOUT or STDERR
 - option: blkio-weight
   default_value: "0"
@@ -20,10 +18,8 @@ options:
   default_value: '[]'
   description: Block IO weight (relative device weight)
 - option: cap-add
-  default_value: '[]'
   description: Add Linux capabilities
 - option: cap-drop
-  default_value: '[]'
   description: Drop Linux capabilities
 - option: cgroup-parent
   description: Optional parent cgroup for the container
@@ -52,14 +48,11 @@ options:
   default_value: "0"
   description: CPU shares (relative weight)
 - option: cpus
-  default_value: "0.000"
   description: Number of CPUs
 - option: cpuset-cpus
   description: CPUs in which to allow execution (0-3, 0,1)
 - option: cpuset-mems
   description: MEMs in which to allow execution (0-3, 0,1)
-- option: credentialspec
-  description: Credential spec for managed service account (Windows only)
 - option: detach
   shorthand: d
   default_value: "false"
@@ -67,8 +60,9 @@ options:
 - option: detach-keys
   description: Override the key sequence for detaching a container
 - option: device
-  default_value: '[]'
   description: Add a host device to the container
+- option: device-cgroup-rule
+  description: Add a rule to the cgroup allowed devices list
 - option: device-read-bps
   default_value: '[]'
   description: Limit read rate (bytes per second) from a device
@@ -85,44 +79,40 @@ options:
   default_value: "true"
   description: Skip image verification
 - option: dns
-  default_value: '[]'
   description: Set custom DNS servers
 - option: dns-opt
-  default_value: '[]'
   description: Set DNS options
 - option: dns-option
-  default_value: '[]'
   description: Set DNS options
 - option: dns-search
-  default_value: '[]'
   description: Set custom DNS search domains
 - option: entrypoint
   description: Overwrite the default ENTRYPOINT of the image
 - option: env
   shorthand: e
-  default_value: '[]'
   description: Set environment variables
 - option: env-file
-  default_value: '[]'
   description: Read in a file of environment variables
 - option: expose
-  default_value: '[]'
   description: Expose a port or a range of ports
 - option: group-add
-  default_value: '[]'
   description: Add additional groups to join
 - option: health-cmd
   description: Command to run to check health
 - option: health-interval
   default_value: 0s
-  description: Time between running the check (ns|us|ms|s|m|h) (default 0s)
+  description: Time between running the check (ms|s|m|h) (default 0s)
 - option: health-retries
   default_value: "0"
   description: Consecutive failures needed to report unhealthy
+- option: health-start-period
+  default_value: 0s
+  description: |
+    Start period for the container to initialize before starting health-retries countdown (ms|s|m|h) (default 0s)
 - option: health-timeout
   default_value: 0s
   description: |
-    Maximum time to allow one check to run (ns|us|ms|s|m|h) (default 0s)
+    Maximum time to allow one check to run (ms|s|m|h) (default 0s)
 - option: help
   default_value: "false"
   description: Print usage
@@ -133,72 +123,70 @@ options:
   default_value: "false"
   description: |
     Run an init inside the container that forwards signals and reaps processes
-- option: init-path
-  description: Path to the docker-init binary
 - option: interactive
   shorthand: i
   default_value: "false"
   description: Keep STDIN open even if not attached
 - option: io-maxbandwidth
+  default_value: "0"
   description: |
     Maximum IO bandwidth limit for the system drive (Windows only)
 - option: io-maxiops
   default_value: "0"
   description: Maximum IOps limit for the system drive (Windows only)
 - option: ip
-  description: Container IPv4 address (e.g. 172.30.100.104)
+  description: IPv4 address (e.g., 172.30.100.104)
 - option: ip6
-  description: Container IPv6 address (e.g. 2001:db8::33)
+  description: IPv6 address (e.g., 2001:db8::33)
 - option: ipc
   description: IPC namespace to use
 - option: isolation
   description: Container isolation technology
 - option: kernel-memory
+  default_value: "0"
   description: Kernel memory limit
 - option: label
   shorthand: l
-  default_value: '[]'
   description: Set meta data on a container
 - option: label-file
-  default_value: '[]'
   description: Read in a line delimited file of labels
 - option: link
-  default_value: '[]'
   description: Add link to another container
 - option: link-local-ip
-  default_value: '[]'
   description: Container IPv4/IPv6 link-local addresses
 - option: log-driver
   description: Logging driver for the container
 - option: log-opt
-  default_value: '[]'
   description: Log driver options
 - option: mac-address
-  description: Container MAC address (e.g. 92:d0:c6:0a:29:33)
+  description: Container MAC address (e.g., 92:d0:c6:0a:29:33)
 - option: memory
   shorthand: m
+  default_value: "0"
   description: Memory limit
 - option: memory-reservation
+  default_value: "0"
   description: Memory soft limit
 - option: memory-swap
+  default_value: "0"
   description: |
     Swap limit equal to memory plus swap: '-1' to enable unlimited swap
 - option: memory-swappiness
   default_value: "-1"
   description: Tune container memory swappiness (0 to 100)
+- option: mount
+  description: Attach a filesystem mount to the container
 - option: name
   description: Assign a name to the container
 - option: net
   default_value: default
   description: Connect a container to a network
 - option: net-alias
-  default_value: '[]'
   description: Add network-scoped alias for the container
 - option: network
   default_value: default
   description: Connect a container to a network
 - option: network-alias
-  default_value: '[]'
   description: Add network-scoped alias for the container
 - option: no-healthcheck
   default_value: "false"
@@ -219,7 +207,6 @@ options:
   description: Give extended privileges to this container
 - option: publish
   shorthand: p
-  default_value: '[]'
   description: Publish a container's port(s) to the host
 - option: publish-all
   shorthand: P
@@ -237,27 +224,25 @@ options:
 - option: runtime
   description: Runtime to use for this container
 - option: security-opt
-  default_value: '[]'
   description: Security Options
 - option: shm-size
-  description: Size of /dev/shm, default value is 64MB
+  default_value: "0"
+  description: Size of /dev/shm
 - option: sig-proxy
   default_value: "true"
   description: Proxy received signals to the process
 - option: stop-signal
   default_value: SIGTERM
-  description: Signal to stop a container, SIGTERM by default
+  description: Signal to stop a container
 - option: stop-timeout
   default_value: "0"
   description: Timeout (in seconds) to stop a container
 - option: storage-opt
-  default_value: '[]'
   description: Storage driver options for the container
 - option: sysctl
   default_value: map[]
   description: Sysctl options
 - option: tmpfs
-  default_value: '[]'
   description: Mount a tmpfs directory
 - option: tty
   shorthand: t
@@ -275,12 +260,10 @@ options:
   description: UTS namespace to use
 - option: volume
   shorthand: v
-  default_value: '[]'
   description: Bind mount a volume
 - option: volume-driver
   description: Optional volume driver for the container
 - option: volumes-from
-  default_value: '[]'
   description: Mount volumes from the specified container(s)
 - option: workdir
   shorthand: w
