--- a/_data/engine-cli/docker_exec.yaml
+++ b/_data/engine-cli/docker_exec.yaml
@@ -6,6 +6,14 @@ long: |-
   The command started using `docker exec` only runs while the container's primary
   process (`PID 1`) is running, and it is not restarted if the container is
   restarted.
+
+  COMMAND will run in the default directory of the container. It the
+  underlying image has a custom directory specified with the WORKDIR directive
+  in its Dockerfile, this will be used instead.
+
+  COMMAND should be an executable, a chained or a quoted command
+  will not work. Example: `docker exec -ti my_container "echo a && echo b"` will
+  not work, but `docker exec -ti my_container sh -c "echo a && echo b"` will.
 usage: docker exec [OPTIONS] CONTAINER COMMAND [ARG...]
 pname: docker
 plink: docker.yaml
@@ -18,7 +26,6 @@ options:
   description: Override the key sequence for detaching a container
 - option: env
   shorthand: e
-  default_value: '[]'
   description: Set environment variables
 - option: interactive
   shorthand: i
