--- a/_data/engine-cli/docker_secret_inspect.yaml
+++ b/_data/engine-cli/docker_secret_inspect.yaml
@@ -18,6 +18,9 @@ options:
 - option: format
   shorthand: f
   description: Format the output using the given Go template
+- option: pretty
+  default_value: "false"
+  description: Print the information in a human friendly format
 examples: |-
   ### Inspect a secret by name or ID
 
@@ -27,8 +30,9 @@ examples: |-
 
   ```bash
   $ docker secret ls
-  ID                          NAME                    CREATED                                   UPDATED
-  mhv17xfe3gh6xc4rij5orpfds   secret.json             2016-10-27 23:25:43.909181089 +0000 UTC   2016-10-27 23:25:43.909181089 +0000 UTC
+
+  ID                          NAME                CREATED             UPDATED
+  eo7jnzguqgtpdah3cm5srfb97   my_secret           3 minutes ago       3 minutes ago
   ```
 
   ```none
@@ -36,14 +40,18 @@ examples: |-
 
   [
       {
-          "ID": "mhv17xfe3gh6xc4rij5orpfds",
-              "Version": {
-              "Index": 1198
+          "ID": "eo7jnzguqgtpdah3cm5srfb97",
+          "Version": {
+              "Index": 17
           },
-          "CreatedAt": "2016-10-27T23:25:43.909181089Z",
-          "UpdatedAt": "2016-10-27T23:25:43.909181089Z",
+          "CreatedAt": "2017-03-24T08:15:09.735271783Z",
+          "UpdatedAt": "2017-03-24T08:15:09.735271783Z",
           "Spec": {
-              "Name": "secret.json"
+              "Name": "my_secret",
+              "Labels": {
+                  "env": "dev",
+                  "rev": "20170324"
+              }
           }
       }
   ]
@@ -56,8 +64,8 @@ examples: |-
   secret.
 
   ```bash
-  $ docker secret inspect --format='{{.CreatedAt}}' mhv17xfe3gh6xc4rij5orpfds
+  $ docker secret inspect --format='{{.CreatedAt}}' eo7jnzguqgtpdah3cm5srfb97
 
-  2016-10-27 23:25:43.909181089 +0000 UTC
+  2017-03-24 08:15:09.735271783 +0000 UTC
   ```
 
