--- a/_data/engine-cli/docker_service_ls.yaml
+++ b/_data/engine-cli/docker_service_ls.yaml
@@ -11,6 +11,8 @@ options:
 - option: filter
   shorthand: f
   description: Filter output based on conditions provided
+- option: format
+  description: Pretty-print services using a Go template
 - option: quiet
   shorthand: q
   default_value: "false"
@@ -39,6 +41,7 @@ examples: |-
 
   * [id](service_ls.md#id)
   * [label](service_ls.md#label)
+  * [mode](service_ls.md#mode)
   * [name](service_ls.md#name)
 
   #### id
@@ -77,6 +80,18 @@ examples: |-
   74nzcxxjv6fq  backend   replicated  3/3       redis:3.0.6
   ```
 
+  #### mode
+
+  The `mode` filter matches on the mode (either `replicated` or `global`) of a service.
+
+  The following filter matches only `global` services.
+
+  ```bash
+  $ docker service ls --filter mode=global
+  ID                  NAME                MODE                REPLICAS            IMAGE
+  w7y0v2yrn620        top                 global              1/1                 busybox
+  ```
+
   #### name
 
   The `name` filter matches on all or part of a service's name.
@@ -87,5 +102,35 @@ examples: |-
   $ docker service ls --filter name=redis
   ID            NAME   MODE        REPLICAS  IMAGE
   0bcjwfh8ychr  redis  replicated  1/1       redis:3.0.6
+  ```
+
+  ### Formatting
+
+  The formatting options (`--format`) pretty-prints services output
+  using a Go template.
+
+  Valid placeholders for the Go template are listed below:
+
+  Placeholder | Description
+  ------------|------------------------------------------------------------------------------------------
+  `.ID`       | Service ID
+  `.Name`     | Service name
+  `.Mode`     | Service mode (replicated, global)
+  `.Replicas` | Service replicas
+  `.Image`    | Service image
+  `.Ports`    | Service ports published in ingress mode
+
+  When using the `--format` option, the `service ls` command will either
+  output the data exactly as the template declares or, when using the
+  `table` directive, includes column headers as well.
+
+  The following example uses a template without headers and outputs the
+  `ID`, `Mode`, and `Replicas` entries separated by a colon for all services:
+
+  ```bash
+  $ docker service ls --format "{{.ID}}: {{.Mode}} {{.Replicas}}"
+
+  0zmvwuiu3vue: replicated 10/10
+  fm6uf97exkul: global 5/5
   ```
 
