--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -805,6 +805,8 @@ reference:
     section:
     - path: /engine/reference/commandline/swarm/
       title: docker swarm
+    - path: /engine/reference/commandline/swarm_ca/
+      title: docker swarm ca
     - path: /engine/reference/commandline/swarm_init/
       title: docker swarm init
     - path: /engine/reference/commandline/swarm_join-token/
